--- a/CityExperWeb/Views/SatilikTasinmaz/Raporlama.cshtml
+++ b/CityExperWeb/Views/SatilikTasinmaz/Raporlama.cshtml
@@ -38,10 +38,11 @@
         }
 
         @@media (max-width: 768PX) {
-            .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-55, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9{
-                padding-right:0px!important;
-                padding-left:0px!important;
+            .col-lg-1, .col-lg-10, .col-lg-11, .col-lg-12, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-md-1, .col-md-10, .col-md-11, .col-md-12, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-55, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-sm-1, .col-sm-10, .col-sm-11, .col-sm-12, .col-sm-2, .col-sm-3, .col-sm-4, .col-sm-5, .col-sm-6, .col-sm-7, .col-sm-8, .col-sm-9, .col-xs-1, .col-xs-10, .col-xs-11, .col-xs-12, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9 {
+                padding-right: 0px !important;
+                padding-left: 0px !important;
             }
+
             .right_col .row .col-md-2 {
                 text-align: center;
                 float: left !important;
@@ -100,14 +101,13 @@
                                 <li>
                                     <a class="nav-link" href="#"><i class="fa fa-calendar-o" aria-hidden="true"></i>Günlük Takip Görünümü</a>
                                 </li>
-
+                                <li>
+                                    <a class="nav-link" href="@Url.Action("Tasinmaz","Yonetim")"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Gayrimenkul Ekle</a>
+                                </li>
                                 <li>
                                     <a><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Gayrimenkul Durumu<span class="fa fa-chevron-down"></span></a>
                                     <ul class="nav child_menu">
                                         <li><a href="#">Güncel Durum</a></li>
-                                        <li>
-                                            <a class="nav-link" href="@Url.Action("Tasinmaz","Yonetim")">Gayrimenkul Ekle</a>
-                                        </li>
                                         <li><a href="#">Kira Kontrat Durumu</a></li>
                                         <li><a href="#">deneme</a></li>
                                     </ul>
@@ -130,29 +130,29 @@
                                     </ul>
                                 </li>
                                 @*<li>
-                                        <a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
-                                        <ul class="nav child_menu">
-                                            <li><a href="#">Tables</a></li>
-                                            <li><a href="#">Table Dynamic</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
-                                        <ul class="nav child_menu">
-                                            <li><a href="chartjs.html">Chart JS</a></li>
-                                            <li><a href="chartjs2.html">Chart JS2</a></li>
-                                            <li><a href="morisjs.html">Moris JS</a></li>
-                                            <li><a href="echarts.html">ECharts</a></li>
-                                            <li><a href="other_charts.html">Other Charts</a></li>
-                                        </ul>
-                                    </li>
-                                    <li>
-                                        <a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
-                                        <ul class="nav child_menu">
-                                            <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
-                                            <li><a href="fixed_footer.html">Fixed Footer</a></li>
-                                        </ul>
-                                    </li>*@
+            <a><i class="fa fa-table"></i> Tables <span class="fa fa-chevron-down"></span></a>
+            <ul class="nav child_menu">
+                <li><a href="#">Tables</a></li>
+                <li><a href="#">Table Dynamic</a></li>
+            </ul>
+        </li>
+        <li>
+            <a><i class="fa fa-bar-chart-o"></i> Data Presentation <span class="fa fa-chevron-down"></span></a>
+            <ul class="nav child_menu">
+                <li><a href="chartjs.html">Chart JS</a></li>
+                <li><a href="chartjs2.html">Chart JS2</a></li>
+                <li><a href="morisjs.html">Moris JS</a></li>
+                <li><a href="echarts.html">ECharts</a></li>
+                <li><a href="other_charts.html">Other Charts</a></li>
+            </ul>
+        </li>
+        <li>
+            <a><i class="fa fa-clone"></i>Layouts <span class="fa fa-chevron-down"></span></a>
+            <ul class="nav child_menu">
+                <li><a href="fixed_sidebar.html">Fixed Sidebar</a></li>
+                <li><a href="fixed_footer.html">Fixed Footer</a></li>
+            </ul>
+        </li>*@
                             </ul>
                         </div>
                         <div class="menu_section">
@@ -387,41 +387,41 @@
                                 <div id="container" style="min-width: 310px; max-width: 500px; height: 400px; margin: 0 auto"></div>
 
                                 @*<div class="col-md-12 col-sm-12 col-xs-12">
-                            <div>
-                                <p>Kira Kontrat Süresi Bitecek Olanlar Gayrimenkuller</p>
-                                <div class="">
-                                    <div class="progress progress_sm" style="width: 100%;">
-                                        <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="20"></div>
+                                        <div>
+                                            <p>Kira Kontrat Süresi Bitecek Olanlar Gayrimenkuller</p>
+                                            <div class="">
+                                                <div class="progress progress_sm" style="width: 100%;">
+                                                    <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="20"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <p>Ödeme Yapılan Gayrimenkuller Sayısı</p>
+                                            <div class="">
+                                                <div class="progress progress_sm" style="width: 100%;">
+                                                    <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="60"></div>
+                                                </div>
+                                            </div>
+                                        </div>
                                     </div>
-                                </div>
-                            </div>
-                            <div>
-                                <p>Ödeme Yapılan Gayrimenkuller Sayısı</p>
-                                <div class="">
-                                    <div class="progress progress_sm" style="width: 100%;">
-                                        <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="60"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12 col-sm-12 col-xs-12">
-                            <div>
-                                <p>Makbuz Onaylanması Yapılmamış Gayrimenkuller</p>
-                                <div class="">
-                                    <div class="progress progress_sm" style="width: 100%;">
-                                        <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="40"></div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div>
-                                <p>Ödeme Yapılmayan Gayrimenkuller Sayısı</p>
-                                <div class="">
-                                    <div class="progress progress_sm" style="width: 100%;">
-                                        <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="50"></div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>*@
+                                    <div class="col-md-12 col-sm-12 col-xs-12">
+                                        <div>
+                                            <p>Makbuz Onaylanması Yapılmamış Gayrimenkuller</p>
+                                            <div class="">
+                                                <div class="progress progress_sm" style="width: 100%;">
+                                                    <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="40"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div>
+                                            <p>Ödeme Yapılmayan Gayrimenkuller Sayısı</p>
+                                            <div class="">
+                                                <div class="progress progress_sm" style="width: 100%;">
+                                                    <div class="progress-bar bg-green" role="progressbar" data-transitiongoal="50"></div>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>*@
 
                             </div>
 
@@ -746,8 +746,8 @@
                 </div>
                 <div class="row" style="margin-bottom:1%;">
                     @*<div class="col-md-8">
-                <div id="mainb" style="height:350px;margin-top:7%;"></div>
-            </div>*@
+                            <div id="mainb" style="height:350px;margin-top:7%;"></div>
+                        </div>*@
                     <div class="col-md-12">
                         <div class="" id="main-map" style="height:477px;"></div>
                     </div>
