--- a/CityExperWeb/Views/Shared/_Header.cshtml
+++ b/CityExperWeb/Views/Shared/_Header.cshtml
@@ -1,4 +1,7 @@
-﻿<link href="~/Assets/css/header.css" rel="stylesheet" />
+﻿@{ 
+    var sessionModel = (CityExperWeb.Models.User.UserSessionModel)Session["UserSessionModel"];
+}
+<link href="~/Assets/css/header.css" rel="stylesheet" />
 <link href="~/Assets/dashboard/vendors/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
 <link href="~/Assets/dashboard/vendors/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 <header class="header">
@@ -16,11 +19,11 @@
                 <a class="nav-link" href="@Url.Action("Index","SatilikTasinmaz")"><i class="fa fa-pencil-square-o" aria-hidden="true"></i>Satılık Ekle</a>
                 <a class="nav-link" href="@Url.Action("Raporlama","SatilikTasinmaz")"><span class="glyphicon glyphicon-dashboard" style="margin-right:2px;"></span>Raporlama</a>
             </div>
-            <div class="navbar-nav ml-auto" style="float:right;">
+            @*<div class="navbar-nav ml-auto" style="float:right;">
                 <div id="verticle" style=" width: 1px;height: 45px;background-color: #a99975;"></div>
 
                 @{
-                    var sessionModel = new CityExperWeb.Models.User.UserSessionModel();
+                    
                     if (Session["UserSessionModel"] != null)
                     {
                         sessionModel = (CityExperWeb.Models.User.UserSessionModel)Session["UserSessionModel"];
@@ -37,33 +40,9 @@
                         </a>
                     }
                 }
-            </div>
+            </div>*@
             <div class="navbar-nav ml-auto" style="float:right;">
                 <ul class="nav navbar-nav navbar-right">
-                    <li class="">
-                        <a class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="color: #ffffff!important;font-family:'Roboto',serif;font-size:16px;">
-                            <img style="width:20px;height:20px;" src="~/Assets/dashboard/production/images/user.png" alt="">
-                            @if (sessionModel != null)
-                            {
-                                <span>@sessionModel.AdSoyad</span>
-                            }
-                            else
-                            {
-                                <span>Giriş Yap</span>
-                            }
-                        </a>
-                        <ul class="dropdown-menu dropdown-usermenu pull-right">
-                            <li><a href="@Url.Action("Profil","SatilikTasinmaz")"> Profil</a></li>
-                            <li>
-                                <a href="javascript:;">
-                                    <span class="badge bg-red pull-right">50%</span>
-                                    <span>Ayarlar</span>
-                                </a>
-                            </li>
-                            <li><a href="javascript:;">Yardım</a></li>
-                            <li><a href="@Url.Action("HomePage","Home")"><i class="fa fa-sign-out pull-right"></i> Çıkış Yap</a></li>
-                        </ul>
-                    </li>
                     <li role="presentation" class="dropdown">
                         <a href="javascript:;" class="dropdown-toggle info-number" data-toggle="dropdown" aria-expanded="false" style="color: #ffffff!important;">
                             <i class="fa fa-envelope-o"></i>
@@ -128,6 +107,31 @@
                             </li>
                         </ul>
                     </li>
+                    <li class="">
+                        <a class="user-profile dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="color: #ffffff!important;font-family:'Roboto',serif;font-size:16px;">
+                            <img style="width:25px;height:25px; margin-top:-3%; border-radius:20px" src="~/Assets/dashboard/production/images/user.png" alt="">
+                            @if (sessionModel != null)
+                            {
+                                <span>@sessionModel.AdSoyad</span>
+                            }
+                            else
+                            {
+                                <span>Giriş Yap</span>
+                            }
+                        </a>
+                        <ul class="dropdown-menu dropdown-usermenu pull-right">
+                            <li><a href="@Url.Action("Profil","SatilikTasinmaz")"> Profil</a></li>
+                            <li>
+                                <a href="javascript:;">
+                                    <span class="badge bg-red pull-right">50%</span>
+                                    <span>Ayarlar</span>
+                                </a>
+                            </li>
+                            <li><a href="javascript:;">Yardım</a></li>
+                            <li><a href="@Url.Action("HomePage","Home")"><i class="fa fa-sign-out pull-right"></i> Çıkış Yap</a></li>
+                        </ul>
+                    </li>
+
                 </ul>
             </div>
         </div>
